# auto-hf-kernel-builder

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  guide.md  handoff.md  launch.sh  opencode.json  pyproject.toml  requirements.txt  run.py
assets/: README.md
configs/: config.local.yaml  config.yaml  kernelbench.yaml  template.yaml
configs/L3_4_LeNet5/: config.json
core/: gates.py  loop.py  prepare.py  scaffold.py
docs/: cli.md  isolation.md  setup_cost.md
examples/L1_88_MinGPTNewGelu/: README.md  bench.json  build.json  config.json  inductor.py  kernel.py  prof.json  reference.py  res.json
pipeline/: _import_probe.py  driver.py  execwrap.py  gates.py
skills/: INDEX.md  validate_skills.py
skills/hf-model-to-kernelbench/: SKILL.md  manifest.txt
skills/hf-model-to-kernelbench/references/: contract.md  vram-fit.md
skills/kernel-opt/: SKILL.md
skills/model-select/: SKILL.md
skills/model-select/scripts/: _common.py  (+4 more)
skills/profiling/: SKILL.md
skills/schema/: skill.schema.json
solve/: SKILL.md  launch.sh
src/: bench.py  cli.py  run.py  setup.py
src/agent/: loop.py  prompt.md
src/benchmark/: anticheat.py  baseline.py  bench.py
src/env/: create.py  extract.py  setup.py
src/kernels/: assemble.sh  build.sh  builder.py  flake.nix  scaffold.py
src/profiling/: inductor.py
src/task/: load.py
src/worker/: contract.py  guard.py  pool.py  queue.py  queue_schema.sql  sandbox.py
targets/facebook__sam-vit-base/: selection.json
tests/: test_env.py  test_guard.py  test_load.py  test_queue.py  test_skills.py
(+30 files in other folders)
