[project]
name = "agentic-kernels"
version = "0.1.0"
description = "Autonomous Triton kernel generation for KernelBench tasks"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4",
    "triton>=3.0",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "pyyaml>=6.0",
    "huggingface_hub>=0.23",
    "rich>=13.0",
    "typer>=0.12",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]
extend-exclude = ["configs", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyrefly]
search-path = ["src"]
project-excludes = ["configs", "examples", "**/__pycache__"]
